# kogwistar

./: .dockerignore  .env.example  .gitignore  AI_Native_OS.md  ARD_postgresql_inclusive.md  AUTHOR_AI_USAGE_ANALYSIS.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  README_CORE_CONCEPTS.md  SUBSTRATE_REVIEW.md  ZEN.md  architecture_diagram.md  compose.yml  debug_utils_temp.py  gemini3pro-critique.md  mcp_http_server.py  mcp_stdio_server.py  pyproject.toml  pytest.ini  requirements.txt  server_mcp.py  server_mcp_with_admin.py  setup.py  sitecustomize.py
.github/workflows/: ci.yml
diagnostic/: mcp_diag_seed.py
docker/nginx/: nginx.conf
docs/: LEARNING_PATH.md  PERF_PROFILING_CHEATSHEET.md  ai_runtime_workflow_guide.md  author-notes.md  budget_accounting_flow.md  budget_branch_pin_demo.md  budget_rate_switch_demo.md  chat_client_debugging_checklist.md  environment-variables.md  fasthtml_htmx_chat_api_guide.md  framework_then_agent_demo.md  generic_named_projections.md  graph_native_artifact_demo.md  hypergraph_navigator_ard_v2.md  hypergraph_navigator_implementation_checklist.md  kogwistar_ai_os_slice_checklist.md  kogwistar_async_runtime_ard.md  kogwistar_async_runtime_bijection_refactor_plan.md  kogwistar_async_runtime_impl_checklist.md  kogwistar_lane_messaging_ard.md  kogwistar_lane_messaging_impl_checklist.md  kogwistar_user_scoped_insertion_and_policy_view_ard.md  kogwistar_user_scoped_insertion_and_policy_view_checklist.md  kogwistar_visibility_cli_section.md  lane_messaging_contract.md  llm-generated-comparison.md  operator_views_demo.md  operator_views_introspection.md  os_cli_map.md  positioning.md  recovery_repair_demo.md  recovery_repair_utilities.md  research-applications.md  roadmap.md  run_scheduler_flow.md  runtime_fanout_quiescence_race.md  scheduler_priority_demo.md  scoped-seq-policy.md  semantic_dedup_matrix.md  service_daemon_demo.md  (+8 more)
docs/tutorials/: 01_hello_graph_engine.md  02_core_data_model.md  03_build_a_small_knowledge_graph.md  04_conversation_graph_basics.md  05_context_snapshot_and_replay.md  06_first_workflow.md  07_branch_join_workflows.md  08_storage_backends_and_parity.md  09_indexing_pipeline.md  10_event_log_replay_and_cdc.md  11_build_a_mini_graphrag_app.md  12_designer_api_integration.md  13_how_to_test_this_repo.md  14_architecture_deep_dive.md  15_historical_search_tombstone_redirect.md  16_leakage_prevention_with_model_slicing.md  17_custom_llm_provider.md  18_nested_workflow_invocation.md  19_build_artifact_governance_workflow.md  20_generic_named_projection_meta_layer.md  21_rag_retrieval_comparison.md  22_rag_retrieval_comparison_kg_semantics.md  23_lane_messaging_contract.md  24_acl_visibility_tutorial.md  25_async_runtime_tutorial.md  README.md  level-0-simple-rag.md  level-1-retrieval-orchestration.md  level-2-provenance-pinning.md  level-3-event-loop-control.md  runtime-ladder-overview.md  runtime-level-0-basics.md  runtime-level-1-resolvers.md  runtime-level-2-pause-resume.md  runtime-level-3-observability-interop.md  runtime-level-4-sandboxed-ops.md
graph_knowledge_engine/: __init__.py  agentic_answering.py  check_chroma_update_meta_mechanism.py  conversation_context.py  conversation_orchestrator.py  conversation_state_contracts.py  debug_producer.py  engine.py  engine_postgres.py  engine_postgres_meta.py  engine_sqlite.py  entity_registry.py  extraction.py  graph_kinds.py  graph_query.py  id_provider.py  indexing.py  ingester.py  knowledge_retriever.py  mcp_endpoints.py  memory_retriever.py  models.py  ocr.py  postgres_backend.py  retrieval_orchestrator.py  server_mcp_with_admin.py  shortids.py  splitter.py  storage_backend.py  tool_runner.py  typing_interfaces.py
graph_knowledge_engine/cdc/: change_bridge.py  change_bus.py  change_event.py  oplog.py
graph_knowledge_engine/conversation/: __init__.py  agentic_answering.py  conversation_context.py  conversation_orchestrator.py  conversation_state_contracts.py  designer.py  filtering.py  knowledge_retriever.py  memory_retriever.py  models.py  policy.py  resolvers.py  retrieval_orchestrator.py  service.py  span_compat.py  tool_runner.py
graph_knowledge_engine/diagnostic/: mcp_diag_seed.py
graph_knowledge_engine/docs/: ADR-004-phase4-pgvector-authoritative.md  ARD-0000-naming-and-catalog.md  ARD-0006-conversation.md  ARD-0012-repo-restructure-core-workflow-conversation.md  ARD-0013-core-vendor-neutrality-and-sidecar-optionality.md  (+12 more)
graph_navigation_agent/: agent_mcp_l.py
keycloak/: realm-kge.json
kogwistar/: __init__.py  __main__.py  check_chroma_update_meta_mechanism.py  cli.py  debug_producer.py  entity_registry.py  extraction.py  graph_kinds.py  ingester.py  ocr.py  server_mcp_with_admin.py  splitter.py
scripts/: claw_runtime_loop.py  export_schemas.py  profile_in_memory_checkpoint_write.py  rag_retrieval_comparison_kg_semantics.py  rag_retrieval_comparison_tutorial.py  rag_tutorial_ladder.py  runtime_tutorial_ladder.py  start_chroma_server.py  tutorial_ladder.py
tests/: _kg_factories.py  auth_env.py  conftest.py  graph_sample_data.py  graph_seed_helpers.py  net_helpers.py  parametrized_runtime_collector.py  test_adjudication_merge.py  test_adjudication_merge_positive.py  test_adjudication_with_llm_cache.py  test_agentic_answering.py  test_alias_and_adjudication.py  test_aliasing.py  test_async_pg_uow_task_local.py  test_batch_adjudication.py  test_batch_adjudication_par_llm_cache.py  test_conversation_flow.py  test_custom_embedder_injection.py  test_document_rollback.py  test_edge_endpoints_rollback.py  test_embedder_default_and_verify.py  test_embeddings_optional.py  test_engine_sqlite_uow_join.py  test_generate_cross_kind_candidates.py  test_graph_query.py  test_graph_query_real_engine.py  test_graph_upsert.py  test_ingest_document.py  test_ingest_document_mock.py  test_ingest_document_with_llm_cache.py  test_ingester_long_doc.py  test_llm_parameterization.py  test_mcp_endpoings.py  test_mcp_http.py  test_mcp_self_unit_test.py  test_mcp_stdio.py  test_metadata_sanitization.py  test_node_docs_rollback.py  test_node_edge_ref.py  test_pg_container_fixture.py  (+9 more)
(+542 files in other folders)
