[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kogwistar"
dynamic = ["version"]
description = "Knowledge engine + MCP server for graph & document querying"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Peter Chan", email = "humblemat@gmail.com" }]

dependencies = [
  "pydantic>=2.6",
  "anyio>=4.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "mcp>=1.2",
  "fastmcp==3.0.0",
  "httpx>=0.28.1",
  "RapidFuzz>=3.13.0",
  "ollama>=0.5.3",
  "numpy>=1.26",
  "joblib>=1.3",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.8"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=1.1.0", "pytest-dotenv>=0.5.2", "ruff>=0.5", "mypy>=1.8", "build", "twine"]
chroma = ["chromadb>=1.0.15"]
pgvector = ["sqlalchemy>=2.0", "pgvector>=0.3.6", "psycopg[binary]>=3.1"]
openai = ["langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
gemini = ["langchain-core>=0.3.0", "langchain-google-genai>=2.0.0"]
langgraph = ["langgraph>=0.6.5"]
ingestion-openai = ["langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
ingestion-gemini = ["langchain-core>=0.3.0", "langchain-google-genai>=2.0.0"]
mcp-adapter = ["langchain-mcp-adapters>=0.0.8"]
viz = ["pygraphviz>=1.14"]
full = [
  "chromadb>=1.0.15",
  "sqlalchemy>=2.0",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.1",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langgraph>=0.6.5",
  "langchain-mcp-adapters>=0.0.8",
]

[project.scripts]
knowledge-mcp = "graph_knowledge_engine.server_mcp_with_admin:main"


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["graph_knowledge_engine*"]
exclude = ["*.tests*", "*.test*", "tests*", "examples*", "diagnostic*"]
