[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kogwistar"
dynamic = ["version"]
description = "Graph-native agent harness and substrate for knowledge, memory, workflow, and MCP tooling"
keywords = ["agent harness", "agent substrate", "graph-native", "knowledge graph", "memory", "workflow", "mcp"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Peter Chan", email = "humblemat@gmail.com" }]

dependencies = [
  "pydantic-extension>=0.0.7",
  "pydantic>=2.6",
  "anyio>=4.0",
  "Jinja2>=3.1",
  "mcp>=1.2",
  "httpx>=0.28.1",
  "python-jose[cryptography]>=3.3",
  "PyJWT>=2.8",
  "RapidFuzz>=3.13.0",
  "numpy>=1.26",
  "joblib>=1.3",
  "python-dotenv>=1.0.1",
  "requests>=2.32",
  "typing-extensions>=4.8"
]

[project.optional-dependencies]
chroma = ["chromadb>=1.0.15"]
pgvector = ["sqlalchemy>=2.0", "pgvector>=0.3.6", "psycopg[binary]>=3.1"]
server = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "fastmcp==3.0.0"]
openai = ["langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
gemini = ["langchain-core>=0.3.0", "langchain-google-genai>=2.0.0"]
ollama = ["ollama>=0.5.3", "langchain-core>=0.3.0", "langchain-ollama>=0.3.0"]
langgraph = ["langgraph>=0.6.5"]
ingestion-openai = ["langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
ingestion-gemini = ["langchain-core>=0.3.0", "langchain-google-genai>=2.0.0"]
mcp-adapter = ["langchain-mcp-adapters>=0.0.8"]
viz = ["pygraphviz>=1.14"]
test = ["pytest>=8", "pytest-asyncio>=1.1.0", "pytest-dotenv>=0.5.2", "testcontainers>=4.0"]
lint = ["ruff>=0.5"]
typecheck = ["mypy>=1.8"]
build = ["build", "twine"]
full = [
  "chromadb>=1.0.15",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.1",
  "fastmcp==3.0.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.3.0",
  "langgraph>=0.6.5",
  "langchain-mcp-adapters>=0.0.8",
]

[project.scripts]
knowledge-mcp = "kogwistar.server_mcp_with_admin:main"


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["kogwistar*"]
exclude = ["*.tests*", "*.test*", "tests*", "examples*", "diagnostic*"]

[tool.setuptools.package-data]
kogwistar = ["templates/*.html"]
