[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kogwistar"
version = "0.2.4"
description = "Graph-native substrate for knowledge, conversation, workflow, provenance, replay, and MCP/REST tooling"
keywords = ["agent substrate", "graph-native", "knowledge graph", "conversation", "memory", "workflow", "provenance", "replay", "mcp", "rest"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Peter Chan", email = "humblemat@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pydantic-extension>=0.0.7",
  "pydantic>=2.6",
  "anyio>=4.0",
  "Jinja2>=3.1",
  "mcp>=1.2",
  "httpx>=0.28.1",
  "python-jose[cryptography]>=3.3",
  "PyJWT>=2.8",
  "RapidFuzz>=3.13.0",
  "numpy>=1.26",
  "joblib>=1.3",
  "python-dotenv>=1.0.1",
  "requests>=2.32",
  "typing-extensions>=4.8"
]

[project.urls]
Homepage = "https://github.com/humblemat810/kogwistar"
Repository = "https://github.com/humblemat810/kogwistar"
Issues = "https://github.com/humblemat810/kogwistar/issues"

[project.optional-dependencies]
chroma = ["chromadb>=1.0.15"]
pgvector = ["sqlalchemy>=2.0", "pgvector>=0.3.6", "psycopg[binary]>=3.1"]
server = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "fastmcp==3.0.0"]
openai = ["langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
gemini = ["langchain-core>=0.3.0", "langchain-google-genai>=2.0.0"]
ollama = ["ollama>=0.5.3", "langchain-core>=0.3.0", "langchain-ollama>=0.3.0"]
langgraph = ["langgraph>=0.6.5"]
ingestion-openai = ["langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
ingestion-gemini = ["langchain-core>=0.3.0", "langchain-google-genai>=2.0.0"]
mcp-adapter = ["langchain-mcp-adapters>=0.0.8"]
viz = ["pygraphviz>=1.14"]
test = [
  "pytest>=8",
  "pytest-asyncio>=1.1.0",
  "pytest-dotenv>=0.5.2",
  "testcontainers>=4.0"
]
lint = ["ruff>=0.5"]
typecheck = ["mypy>=1.8"]
build = ["build", "twine"]
full = [
  "chromadb>=1.0.15",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.1",
  "fastmcp==3.0.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.3.0",
  "langgraph>=0.6.5",
  "langchain-mcp-adapters>=0.0.8",
]

[project.scripts]
kogwistar = "kogwistar.cli:main"
knowledge-mcp = "kogwistar.server_mcp_with_admin:main"


[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kogwistar*"]
exclude = ["*.tests*", "*.test*", "tests*", "examples*", "diagnostic*"]

[tool.setuptools.package-data]
kogwistar = ["templates/*.html"]

[tool.setuptools.exclude-package-data]
kogwistar = [".env", ".env.*", "*.env", "*.env.*", "*.sqlite", "*.db", "*.pem", "*.key", "*.pfx", "*.p12", "*.crt", "*.cer"]

[tool.pytest.ini_options]
markers = [
  "ci: fast pull-request-safe tests",
  "ci_full: full integration and end-to-end tests",
  "core: core engine tests",
  "workflow: workflow-layer tests",
  "conversation: conversation-layer tests",
  "runtime: runtime engine and parity suites",
  "runtime_async: async runtime contracts",
  "runtime_sync: sync runtime contracts",
  "runtime_bridge_parity: bridge parity contract",
  "manual: manual smoke tests that require a live service",
  "e2e: end-to-end tests against real services",
]
